--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,13 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
-contourpy==1.0.6
-cycler==0.11.0
-Django==4.1.1
+django==4.2.6
 django-crispy-forms==1.14.0
 django-tables2==2.4.1
-fonttools==4.38.0
-joblib==1.1.0
-kiwisolver==1.4.4
-matplotlib==3.6.2
-numpy==1.21.4
 packaging==22.0
 Pillow==9.2.0
 psycopg2-binary==2.9.3
 pygame==2.0.0.dev6
 pyparsing==3.0.9
 python-dateutil==2.8.2
-scikit-learn==1.0.1
-scipy==1.7.3
-six==1.16.0
-sklearn==0.0.post1
 sqlparse==0.4.4
 termcolor==1.1.0
 threadpoolctl==3.0.0
