--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
-rvm:
-  - 3.11
+python:
+  - 3.8
 
-install: ./install dependencies.sh
+install:
+  - pip install -r requirements.txt
