--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 django==4.2.6
 django-crispy-forms==1.14.0
 django-tables2==2.4.1
+flake8==6.1.0
 packaging==22.0
 Pillow==9.2.0
 psycopg2-binary==2.9.3
