--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,8 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id:
-    secure: $aws-access-key-id
-  secret_access_key:
-    secure: "fdsfsdijojo"
+  access_key_id: $aws-access-key-id
+  secret_access_key: $aws_secret_access_key
   region: "us-east-1"
   app: "swe1-app"
   env: "swe1-app-dev"
