--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 black==23.10.0
 coverage==7.3.2
+coveralls==3.3.1
 django==4.2.6
 django-crispy-forms==1.14.0
 django-tables2==2.4.1
