--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,46 @@
 asgiref==3.7.2
+backports.zoneinfo==0.2.1
 black==23.10.0
-coverage==7.3.2
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.0.6
+coverage==6.5.0
 coveralls==3.3.1
-django==4.2.6
+cycler==0.11.0
+Django==4.2.6
 django-crispy-forms==1.14.0
 django-tables2==2.4.1
+docopt==0.6.2
 flake8==6.1.0
+fonttools==4.38.0
+idna==3.4
+joblib==1.1.0
+kiwisolver==1.4.4
+matplotlib==3.6.2
+mccabe==0.7.0
+mypy-extensions==1.0.0
+numpy==1.21.4
 packaging==22.0
+pathspec==0.11.2
 Pillow==9.2.0
+platformdirs==3.11.0
 psycopg2-binary==2.9.3
+pycodestyle==2.11.1
+pyflakes==3.1.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-decouple==3.8
+requests==2.31.0
+scikit-learn==1.0.1
+scipy==1.7.3
+six==1.16.0
+sklearn==0.0.post1
 sqlparse==0.4.4
 termcolor==1.1.0
 threadpoolctl==3.0.0
+tomli==2.0.1
 typing-extensions==4.8.0
 tzdata==2023.3
+urllib3==2.0.7
