--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
+  - psql -c 'create database travis_ci_test;' -U postgre
   - python manage.py migrate
 
 script:
