--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
+  - psql -c 'create database django-polls;' -U postgre
   - python manage.py migrate
 
 
