--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - cp config/database.yml.travis config/database.yml
+  - cp database.yml.travis database.yml
   - psql -c 'create database django-polls;' -U postgre
   - python manage.py migrate
 
