--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,26 @@ python:
 services:
   - postgresql
 
+env:
+  global:
+    - PGPORT = 5433
+  jobs:
+    - NODE_ENV=test DB_PORT=5433 DB_USERNAME=postgres
+
+before_install:
+  - >-
+    sudo sed -i
+    -e '/local.*peer/s/postgres/all/'
+    -e 's/peer\|md5/trust/g'
+    /etc/postgresql/13/main/pg_hba.conf
+  - sudo service postgresql@13-main restart
+
 install:
   - pip install -r requirements.txt
 
 before_script:
-  - cp database.yml.travis.travis database.yml.travis
-  - psql -c 'create database django-polls;' -U postgre
+  - sudo psql -r 5433 -U postgre -c 'create database my-app;'
   - python manage.py migrate
-
 
 script:
   - black --check .
