--- a/.travis.yml
+++ b/.travis.yml
@@ -10,32 +10,28 @@ services:
 
 addons:
   # Use a different PostgreSQL version than the default:
-  postgresql: 13
+  postgresql: '12'
   apt:
-    update: true
     packages:
-      - postgresql-13
-      - postgresql-13-postgis-3
+      - postgresql-12
 
 env:
   global:
-    - PGPORT=5433
-  jobs:
-    - NODE_ENV=test DB_PORT=5433 DB_USERNAME=postgres
+    - PGUSER=postgres
+    - PGPORT=5432
+    - PGHOST=localhost
 
 before_install:
-  - >-
-    sudo sed -i
-    -e '/local.*peer/s/postgres/all/'
-    -e 's/peer\|md5/trust/g'
-    /etc/postgresql/13/main/pg_hba.conf
-  - sudo service postgresql@13-main restart
+  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
+  - sudo service postgresql restart
+  - sleep 1
+  - postgres --version
 
 install:
   - pip install -r requirements.txt
 
 before_script:
-  - sudo psql -r 5433 -U postgre -c 'create database my-app;'
+  - psql -c 'create database travis_ci_test;' -U postgres
   - python manage.py migrate
 
 script:
