--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ services:
 
 addons:
   # Use a different PostgreSQL version than the default:
-  postgresql: '13'
   apt:
+    update: true
     packages:
       - postgresql-13
+      - postgresql-13-postgis-3
 
 env:
   global:
