--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ addons:
 
 env:
   global:
-    - PGUSER=postgres
-    - PGPORT=5432
-    - PGHOST=localhost
+    - PGPORT=5433
+  jobs:
+    - NODE_ENV=test DB_PORT=5433 DB_USERNAME=postgres
 
 before_install:
   - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
@@ -32,7 +32,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -p 5433 -U postgres -c 'create database my-app;'
   - python manage.py migrate
 
 script:
