--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - psql -c 'create database django-polls;' -U postgres
+  - psql -c 'create database djangopolls;' -U postgres
   - python manage.py migrate
 
 script:
