--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ deploy:
   region: "us-east-1"
   app: "swe1-app"
   env: "swe1-app-dev"
+  bucket_name: "djangopollslp"
   on:
     repo: louispo0603/swe1-app
     branch: main
