--- a/.travis.yml
+++ b/.travis.yml
@@ -48,4 +48,4 @@ deploy:
     branch: main
 
 after_script:
-  - coveralls
+  - curl -sL https://coveralls.io/coveralls-linux.tar.gz | tar -xz && ./coveralls
